--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,13 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "main.py"
+            "dest": "/main.py"
         }
-    ]
+    ],
+    "functions": {
+        "main.py": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    }
 } 
