--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
         }
     ],
     "functions": {
-        "main.py": {
+        "api/webhook.py": {
             "memory": 1024,
             "maxDuration": 10
         }
